--- a/sites/all/themes/escuelas/css/components/estilos.css
+++ b/sites/all/themes/escuelas/css/components/estilos.css
@@ -181,3 +181,12 @@ button:hover, input[type="submit"]:hover
   	list-style: none;
   	margin: 5px 0px 0px -20px;
 }
+
+#block-block-1
+{
+  background-color: #FBC700;
+  padding: 10px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+}
