--- a/sites/all/themes/escuelas/css/components/estilos.css
+++ b/sites/all/themes/escuelas/css/components/estilos.css
@@ -77,6 +77,7 @@ body
   background-image: url(../../images/imagenHeader-01.png);
   background-repeat: no-repeat;
   background-position: right bottom;
+  position: relative;
  }
 
  #page
@@ -84,6 +85,24 @@ body
  	background-color: white;
   padding-bottom: 10px;
  }
+
+ .fondoHome
+ {
+    background-image: url(../../images/back1-01.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom right;
+ }
+
+.page-projects #main
+{
+  
+}
+
+.page-user #main
+{
+  
+}
 
 a
 {
@@ -108,6 +127,7 @@ a:hover
   -moz-border-radius: 2px;
   border-radius: 2px;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .region-sidebar-second
@@ -122,10 +142,51 @@ a:hover
 {
 	background-color: #FBC700;
 	padding: 1em;
-	-webkit-border-radius: 2px;
-	-moz-border-radius: 2px;
-	border-radius: 2px;
-	margin-top: 10px;
+	-webkit-border-bottom-right-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+	margin:0;
+  float: right;
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  z-index: 50;
+  width: 200px;
+}
+
+#block-user-login h2.block__title, #block-user-login h2.block-title
+{
+  display: none;
+  margin: 0;
+}
+
+#toboggan-login-link-container
+{
+  background-color: #56ABDD;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  text-align: center;
+  padding: 0.5em;
+  outline: solid 4px rgba(255,255,255,0.5);
+}
+
+#toboggan-login-link-container a
+{
+  color: white;E3462D
+}
+
+#toboggan-login-link-container a:hover
+{
+  color: #E3462D;
+}
+
+#block-user-login .item-list
+{
+  display: none;
 }
 
 button, input[type="submit"]
@@ -265,3 +326,107 @@ td:last-child
 {
   border:none;
 }
+
+#footer
+{
+  background-color: #2B356A;
+  min-height: 100px;
+}
+
+.menuFooter
+{
+  width: 400px;
+  height: auto;
+}
+
+.menuFooter li
+{
+  list-style-type: none;
+  float: left;
+  border-right: thin solid white;
+  padding-right: 10px;
+  margin-left: 10px;
+}
+
+.menuFooter li:last-child
+{
+  border:none;
+}
+
+.menuFooter li a
+{
+  color: white;
+}
+
+.menuFooter li a:hover
+{
+  color: #E3462D;
+}
+
+#user-register-form
+{
+  background-color: #FBC700;
+  padding: 1em;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  margin-top: 10px;
+  outline: solid 4px rgba(255,255,255,0.5);
+}
+
+.pane-title
+{
+  margin: 0;
+}
+
+.personajeRegistro
+{
+  position: absolute;
+  width: 75px;
+  height: 140px;
+  background-image: url(../../images/personaje1-01.png);
+  top: 55px;
+  right: 40px;
+}
+
+.logos
+{
+  width: 310px;
+  height: 55px;
+  float: right;
+}
+
+.cajaLogo1
+{
+  width: 155px;
+  height: 55px;
+  float: left;
+  background-image: url(../../images/logoCier-01.png);
+  background-repeat: no-repeat;
+}
+
+.cajaLogo2
+{
+  width: 155px;
+  height: 55px;
+  float: left;
+  background-image: url(../../images/logoUnal-01.png);
+  background-repeat: no-repeat;
+}
+
+tr
+{
+  background-color: #FBC700;
+}
+
+th
+{
+  border-right: thin solid #FCD300;
+  padding: 0.3em;
+}
+
+th:last-child
+{
+  border: none;
+}
+
