--- a/sites/all/themes/escuelas/css/components/estilos.css
+++ b/sites/all/themes/escuelas/css/components/estilos.css
@@ -374,11 +374,6 @@ td:last-child
   outline: solid 4px rgba(255,255,255,0.5);
 }
 
-.pane-title
-{
-  margin: 0;
-}
-
 .personajeRegistro
 {
   position: absolute;
@@ -421,7 +416,7 @@ tr
 
 th
 {
-  border-right: thin solid #FCD300;
+  border-right: thin solid #2B356A;
   padding: 0.3em;
 }
 
@@ -430,3 +425,88 @@ th:last-child
   border: none;
 }
 
+/*MODULO PROYECTOS*/
+
+.usuariosProyecto th
+{
+  padding: 0.5em;
+}
+
+tr
+{
+  border-bottom: 3px solid #FCD300;
+}
+
+.sticky-table
+{
+  clear: both;
+}
+
+.sticky-table th
+{
+  border-bottom:none;
+  padding: 0.5em;
+}
+
+textarea
+{
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.pane-stickynote
+{
+  background-color: #BDCCD4;
+  padding: 0.5em;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.pane-title
+{
+  float: right;
+  margin: 0px -28px 5px 0px;
+  display: block;
+  background-image: url(../../images/badgeTitulos-01.png);
+  background-repeat: no-repeat;
+  width: 150px;
+  height: 56px;
+  padding-left: 10px;
+  color: white;
+}
+
+.note-1
+{
+  word-wrap: break-word;
+}
+
+.formularioAddUsuarios
+{
+  padding: 0.2em;
+}
+
+.formularioUsuariosProyecto
+{
+  background-color: #BDCCD4;
+  padding: 0.5em;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.separarBoton
+{
+  margin-left: 10px;
+}
+
+input[type="email"]
+{
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border-collapse: collapse;
+  padding: 0.2em;
+  border: thin solid #CCCCCC;
+}
