Ajuste en css y en gitignore

--- a/sites/all/themes/escuelas/css/components/estilos.css
+++ b/sites/all/themes/escuelas/css/components/estilos.css
@@ -455,7 +455,7 @@ textarea
   border-radius: 4px;
 }
 
-.pane-stickynote
+.pane-stickynote-stickynote-block
 {
   background-color: #BDCCD4;
   padding: 0.5em;
