--- a/sites/all/themes/escuelas/css/components/estilos.css
+++ b/sites/all/themes/escuelas/css/components/estilos.css
@@ -199,6 +199,7 @@ button, input[type="submit"]
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
+  margin-bottom: 20px;
 }
 
 button:hover, input[type="submit"]:hover
@@ -427,6 +428,11 @@ th:last-child
 
 /*MODULO PROYECTOS*/
 
+.usuariosProyecto
+{
+  width: 100%;
+}
+
 .usuariosProyecto th
 {
   padding: 0.5em;
@@ -457,7 +463,7 @@ textarea
 
 .pane-stickynote-stickynote-block
 {
-  background-color: #BDCCD4;
+  background-color: #EAEAEA;
   padding: 0.5em;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -468,6 +474,19 @@ textarea
 {
   float: right;
   margin: 0px -28px 5px 0px;
+  display: block;
+  background-image: url(../../images/badgeTitulos-01.png);
+  background-repeat: no-repeat;
+  width: 150px;
+  height: 56px;
+  padding-left: 10px;
+  color: white;
+}
+
+.pane-title2
+{
+  float: right;
+  margin: 10px -18px 5px 0px;
   display: block;
   background-image: url(../../images/badgeTitulos-01.png);
   background-repeat: no-repeat;
@@ -489,7 +508,7 @@ textarea
 
 .formularioUsuariosProyecto
 {
-  background-color: #BDCCD4;
+  background-color: #EAEAEA;
   padding: 0.5em;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -509,4 +528,91 @@ input[type="email"]
   border-collapse: collapse;
   padding: 0.2em;
   border: thin solid #CCCCCC;
+}
+
+.ng-scope
+{
+  background-color: #EAEAEA;
+  padding: 0.3em;
+  margin-top: 10px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.ng-pristine
+{
+  margin-top: 25px;
+}
+
+.ng-pristine button
+{
+  margin-top: 20px;
+}
+
+input[type="text"]
+{
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border-collapse: collapse;
+  padding: 0.2em;
+  border: thin solid #CCCCCC;
+}
+
+#mini-panel-panel_proyecto > div.panel-panel.panel-col-top > div > div > h2
+{
+  margin: 10px -18px 5px 0px;
+}
+
+.botonNuevoProyecto
+{
+  background-color: #56ABDD;
+  padding: 0.5em 2.3em 0.5em 0.5em;
+  margin-top: 20px;
+  color: white;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  width: 150px;
+  height: 40px;
+  background-image: url(../../images/iconoNuevoProyecto-01.png);
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+#tbProjects
+{
+  width: 100%;
+}
+
+#tbProjects_wrapper
+{
+  margin-top: 20px;
+}
+
+.page__title
+{
+  background-color: #2B356A;
+  padding: 0.3em;
+  color: white;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  margin: 10px 0px;
+  background-image: url(../../images/iconoAvion-01.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+}
+
+#tbProjects_info
+{
+  margin-bottom: 10px;
+  font-style: italic;
+  font-size: 0.8em;
+}
+
+.sticky-table
+{
+  width: 100%;
 }
