--- a/sites/all/themes/escuelas/css/components/misc.css
+++ b/sites/all/themes/escuelas/css/components/misc.css
@@ -215,7 +215,7 @@
 .comments__title,      /* Comment section heading. */
 .comments__form-title, /* Comment form heading. */
 .comment__title {      /* Comment title. */
-  margin: 0;
+  margin: 0 0 15px 0;
 }
 
 /**
