--- a/sites/all/themes/escuelas/css/components/estilos.css
+++ b/sites/all/themes/escuelas/css/components/estilos.css
@@ -83,7 +83,6 @@ body
  #page
  {
  	background-color: white;
-  padding-bottom: 10px;
  }
 
  .fondoHome
@@ -270,7 +269,7 @@ button:hover, input[type="submit"]:hover
   background-color: #FCD300;
   height: auto;
   min-height: 110px;
-  padding:10px;
+  padding:0.3em;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
@@ -278,17 +277,24 @@ button:hover, input[type="submit"]:hover
 
 .divUsuario
 {
-  width: 110px;
-  height: 110px;
+  width: 100px;
+  height: 100px;
   float: left;
 }
 
 .divUsuario2
 {
   width: 90px;
-  height: 110px;
+  height: auto;
   float: left;
   font-size: 0.7em;
+}
+
+.ajuste
+{
+  width: 100%;
+  height: 1px;
+  clear: both;
 }
 
 .divUsuario2 ul
@@ -616,3 +622,4 @@ input[type="text"]
 {
   width: 100%;
 }
+
